--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-   "start": "node dist/front/server/server.mjs",
-
+    "start": "node dist/front/server/server.mjs",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -22,6 +21,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.11",
+    "axios": "^1.7.9",
     "express": "^4.18.2",
     "primeicons": "^7.0.0",
     "primeng": "^18.0.0",
