--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.11",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "primeicons": "^7.0.0",
     "primeng": "^18.0.0",
